--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 		<title>Rock-Paper-Scissors</title>
 	</head>
 
-	<body></body>
+	<body>
+		<button id="rock">ROCK</button>
+		<button id="paper">PAPER</button>
+		<button id="scissors">SCISSORS</button>
+
+		<div id="round-result"></div>
+
+	</body>
 
 	<script src="script.js"></script>
 
