update script to use buttons for user input and declare winner of 1st to 5

--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 	</head>
 
 	<body>
-		<button id="rock">ROCK</button>
-		<button id="paper">PAPER</button>
-		<button id="scissors">SCISSORS</button>
+		<div id="buttons">
+			<button id="rock">ROCK</button>
+			<button id="paper">PAPER</button>
+			<button id="scissors">SCISSORS</button>
+		</div>
 
-		<div id="round-result"></div>
+		<div>
+			<p>Round result: <b id="round-result"></b> </p>
+		</div>
+		<div id="current-score">
+			<p id="player-total">Your score is: <b id="player-score"></b></p>
+			<p id="comp-total">Computer's score is: <b id="comp-score"></b></p>
+			<p id="winner"></p>
+		</div>
 
 	</body>
 
